--- a/src/style.css
+++ b/src/style.css
@@ -172,3 +172,11 @@ li {
     align-items: center;
     justify-content: space-between;
 }
+
+@media (min-width: 200px) and (max-width: 1400px) {
+    .newPost .formPost .iconsAndButton {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+   }
