--- a/src/style.css
+++ b/src/style.css
@@ -154,6 +154,7 @@ li {
 }
 
 .newPost .formPost textarea{
+    height: 90px;
     margin: 15px 0;
     padding: 28px;
     align-items: center;
@@ -164,6 +165,7 @@ li {
     border: 0;
     font-family: 'Roboto Slab', sans-serif;
     font-size: 14px;
+    display: flex;
 
 }
 
@@ -172,3 +174,36 @@ li {
     align-items: center;
     justify-content: space-between;
 }
+
+.btnSubmitForm, #btnLogout, .btnLike{
+    cursor: pointer;
+}
+.filePost {
+    
+}
+
+.like {
+    width: 20px;
+    justify-content: space-between;
+}
+
+.post {
+    background: #fff;
+    box-shadow: 1px 0 10px rgba(0,0,0,0.1);
+}
+.post .posts {
+    margin-top: 50px;
+    background: #fff;
+    border-radius: 10px;
+    padding: 25px;
+    width: 100%;
+   
+}
+
+@media (min-width: 200px) and (max-width: 1400px) {
+    .newPost .formPost .iconsAndButton {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+   }
