--- a/src/style.css
+++ b/src/style.css
@@ -178,9 +178,9 @@ li {
 .btnSubmitForm, #btnLogout, .btnLike{
     cursor: pointer;
 }
-.filePost {
+/* .filePost {
     
-}
+} */
 
 .like {
     width: 20px;
