--- a/src/style.css
+++ b/src/style.css
@@ -147,13 +147,13 @@ li {
 
 }
 
-.newPost .formPost {
+.newPost #formPost {
     width: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.newPost .formPost textarea{
+.newPost #formPost textarea{
     height: 90px;
     margin: 15px 0;
     padding: 28px;
@@ -169,7 +169,7 @@ li {
 
 }
 
-.newPost .formPost .iconsAndButton {
+.newPost #formPost .buttonForm {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -178,9 +178,9 @@ li {
 .btnSubmitForm, #btnLogout, .btnLike{
     cursor: pointer;
 }
-.filePost {
+/* .filePost {
     
-}
+} */
 
 .like {
     width: 20px;
@@ -201,7 +201,7 @@ li {
 }
 
 @media (min-width: 200px) and (max-width: 1400px) {
-    .newPost .formPost .iconsAndButton {
+    .newPost #formPost .iconsAndButton {
         display: flex;
         align-items: center;
         justify-content: space-between;
