read-me/post on screen

--- a/src/style.css
+++ b/src/style.css
@@ -243,3 +243,10 @@ header {
   justify-content: center;
 }
 }
+
+@media screen (max-width: 1750px) {
+
+  .newPost #formPost .iconsAndButton {
+    width: 58.5vw;
+  };
+};
