--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+.menu {
+  display: flex;
+  flex-direction: row;
+  font-size: 25px;
+  text-indent: 2em;
+}
 
 body {
   background-image: url("./images/design-background.png");
@@ -25,9 +31,6 @@ header {
   margin-left: 48px;
   justify-content: center;
   display: flex;
-}
-
-.two {
 }
 
 li {
@@ -102,14 +105,26 @@ li {
   margin: 5px;
   margin-top: 20px;
 }
+.bt {
+  width: 50px;
+  height: 50px;
+  border-radius: 10px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+}
 
 #forgot:hover {
   cursor: pointer;
 }
 
 .mainFeed {
-  max-width: 900px;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .newPost {
@@ -134,6 +149,11 @@ li {
   padding: 25px;
   margin: 0 110px;
 }
+.bt {
+  position: absolute;
+  top: 200px;
+  width: 150px;
+}
 
 .imgUser {
   display: flex;
@@ -154,7 +174,7 @@ strong {
 
 #textPost,
 #textPostUser {
-  margin-top: 10px;
+  /* margin-top: 40%; */
   width: 75vw;
   height: 17vh;
   border-radius: 5px;
